fixed too much padding issue in group admin dashboard

--- a/client/stylus/app.group.dashboard.styl
+++ b/client/stylus/app.group.dashboard.styl
@@ -242,7 +242,7 @@
     padding-left              5px
   .readme
     borderBox()
-    padding                   0px 0 0 0
+    padding                   0px 20px
     width                     100%
 
     .data
@@ -281,9 +281,6 @@
   .group-content
     borderBox()
     height                    auto
-
-    .kdtabpaneview
-      padding 0px 20px
 
     .kdtabhandlecontainer
       padding-top             0
@@ -674,6 +671,8 @@
         noTextDeco()
 
     .permissions-view
+      padding                 0 20px
+
       .add-role-dialog
         z-index               100000
 
@@ -801,6 +800,9 @@
           color               white
           .input-wrapper
             text-align        left
+
+    .vocabulary > .kdview
+      padding                 0 20px
 
 @media screen and (max-width:1000px)
 
